(fix) fixing up horizontal scroll on mobile bug

--- a/app/assets/stylesheets/dit-styleguide-augment/components/_results.scss
+++ b/app/assets/stylesheets/dit-styleguide-augment/components/_results.scss
@@ -95,6 +95,8 @@
   }
 
   .button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
     background-color: $midblue;
     color: $white;
     margin-top: $small-spacing;
@@ -104,3 +106,4 @@
     }
   }
 }
+
